--- a/settings/project.json
+++ b/settings/project.json
@@ -32,5 +32,8 @@
       "enable": false
     }
   },
-  "preview-port": 7456
+  "preview-port": 7456,
+  "migrate-history": [
+    "cloud-function"
+  ]
 }
